force-app/main/default/objects/Invoice_Header__c/fields/Date_Paid__c.field-meta.xml
<CustomField>
    <fullName>Date_Paid__c</fullName>
    <label>Date Paid</label>
    <type>Date</type>
</CustomField>