force-app/main/default/objects/Invoice_Header__c/fields/Entity_Address__c.field-meta.xml
<CustomField>
    <fullName>Entity_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity Address</label>
    <referenceTo>Entity_Address__c</referenceTo>
    <relationshipLabel>Invoice Headers</relationshipLabel>
    <relationshipName>Invoice_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>