force-app/main/default/objects/Invoice_Header__c/fields/Entity_Contact__c.field-meta.xml
<CustomField>
    <fullName>Entity_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity Contact</label>
    <referenceTo>Entity_Contact__c</referenceTo>
    <relationshipLabel>Invoice Headers</relationshipLabel>
    <relationshipName>Invoice_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>