force-app/main/default/objects/Invoice_Header__c/fields/Entity_type__c.field-meta.xml
<CustomField>
    <fullName>Entity_type__c</fullName>
    <formula>Text(Entity__r.Entity_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity type</label>
    <type>Text</type>
</CustomField>