force-app/main/default/objects/Invoice_Header__c/fields/Invoice_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_End_Date__c</fullName>
    <formula>Invoice_Date__c + 55</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice End Date</label>
    <type>Date</type>
</CustomField>