force-app/main/default/objects/Invoice_Header__c/fields/Reminder_15_Days__c.field-meta.xml
<CustomField>
    <fullName>Reminder_15_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder - 15 Days</label>
    <type>Checkbox</type>
</CustomField>