force-app/main/default/objects/Invoice_Header__c/fields/Reminder_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Reminder_30_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder - 30 Days</label>
    <type>Checkbox</type>
</CustomField>