force-app/main/default/objects/Invoice_Header__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Program_Code__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Entity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>